--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 body {
     background: #808080;
     font-family: sans-serif;
+    font-size: 12px;
 }
 
 em {
@@ -22,7 +23,6 @@ em {
 }
 
 .manager {
-    font-size: 12px;
     background-color: #f0f0f0;
     padding: 4px;
 }
@@ -153,6 +153,8 @@ button.layer-manager-toolbar-remove-button {
     margin: 0;
     width: 100%;
     height: 100%;
+    background: none;
+    border: 1px #999 solid;
 }
 
 #tile-set-manager-tile-set-selector button {
@@ -191,3 +193,18 @@ button.tile-set-manager-toolbar-add-button {
 button.tile-set-manager-toolbar-remove-button {
     background-image: url(../images/edit-delete.png);
 }
+
+#windows {
+    display: none;
+}
+
+.window {
+    padding: 10px 6px;
+    background-color: #f0f0f0;
+    min-width: 500px;
+}
+
+.window h2 {
+
+}
+
