--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ button.layer-manager-toolbar-remove-button {
     margin: 0;
     width: 100%;
     height: 100%;
-    background: none;
+    background: white;
     border: 1px #999 solid;
 }
 
@@ -199,12 +199,54 @@ button.tile-set-manager-toolbar-remove-button {
 }
 
 .window {
-    padding: 10px 6px;
+    padding: 10px 10px;
     background-color: #f0f0f0;
     min-width: 500px;
 }
 
 .window h2 {
+    font-style: italic;
+    padding-bottom: 4px;
+    margin: 4px 0;
+    border-bottom: 1px #ccc solid;
+}
 
+.window form input {
+    margin: 2px 0;
+}
+
+.window form table {
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+.window form table th,
+.window form table td {
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.window form table th {
+    width: 100px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: right;
+}
+
+.window form table td {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+#tile-set-editor-name {
+    width: 100%;
+}
+
+#tile-set-editor-tile-width,
+#tile-set-editor-tile-height,
+#tile-set-editor-tile-margin,
+#tile-set-editor-tile-spacing {
+    width: 40px;
+    text-align: center;
 }
 
