--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,11 @@ button.layer-manager-toolbar-remove-button {
     overflow-y: auto;
 }
 
+.tile-set-manager-tile-selector > div {
+    float: left;
+    margin: 0 1px 1px 0;
+}
+
 .tile-set-manager-toolbar {
     position: absolute;
     bottom: 4px;
