--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,6 @@ button.layer-manager-toolbar-remove-button {
     text-overflow: ellipsis;
 
     -moz-user-select: -moz-none;
-    -khtml-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -187,6 +186,18 @@ button.layer-manager-toolbar-remove-button {
 .tile-set-manager-tile-selector > div {
     float: left;
     margin: 0 1px 1px 0;
+}
+
+.tile-set-manager-tile-selector > div > div {
+    width: 100%;
+    height: 100%;
+    background: #87ceeb;
+
+    -moz-opacity: .70;
+    -ms-filter: "alpha(opacity=70)";
+    filter: alpha(opacity=70);
+    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.7);
+    opacity: .70;
 }
 
 .tile-set-manager-toolbar {
