--- a/css/main.css
+++ b/css/main.css
@@ -16,15 +16,44 @@ em {
 
 #main-menu {
     position: absolute;
-    left: 100px;
+    left: 20px;
     top: -1px;
     z-index: 10;
+
+    -moz-opacity: .70;
+    -ms-filter: "alpha(opacity=70)";
+    filter: alpha(opacity=70);
+    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.7);
+    opacity: .70;
+}
+
+#main-menu.up,
+#main-menu:hover {
+    -moz-opacity: 1.0;
+    -ms-filter: "alpha(opacity=100)";
+    filter: alpha(opacity=100);
+    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=1.0);
+    opacity: 1.0;
+}
+
+#main-menu-toggle {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    bottom: -6px;
+    height: 10px;
+    cursor: ns-resize;
 }
 
 .menu {
     background: #f0f0f0;
     border: 1px #b9b9b9 solid;
     padding: 4px;
+
+    -moz-user-select: -moz-none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .menu button {
